--- a/crew_agentic_rag.ipynb
+++ b/crew_agentic_rag.ipynb
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from crewai import Agent, Task, Crew, LLM\n",
-    "from tools import *\n",
+    "from tools_repo.tools import *\n",
     "from config import *\n",
     "import os\n",
     "from IPython.display import Markdown"
@@ -341,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
