--- a/crew_router_serper.ipynb
+++ b/crew_router_serper.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
    ],
    "source": [
     "from config import *\n",
-    "from tools import *\n",
+    "from tools_repo.tools import *\n",
     "import os\n",
     "from IPython.display import Markdown"
    ]
